--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.18",
     "@nuxtjs/leaflet": "^1.2.6",
-    "leaflet": "^1.9.4",
+    "@tailwindcss/vite": "^4.1.18",
     "daisyui": "^5.5.14",
+    "install": "^0.13.0",
+    "leaflet": "^1.9.4",
+    "lucide-vue-next": "^0.561.0",
     "nuxt": "^4.2.2",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.25",
